# eastern_city

./: CMakeLists.txt  EasternCity.sln  EasternCity.vcxproj  README.md  SConstruct  local.properties  todo.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: music  pics  sfx  shaders
app/src/main/assets/data/: genericroom.xml  itemLocations.xml  items.xml  out.xml  outside.xml  recipes.xml  room.xml  stairwell.xml  stairwell2.xml
app/src/main/assets/pics/: baubas.tga  buttons.tga  dude_sleep.tga  flashlight.tga  hud_icons.tga  imagesToLoad.xml  items.tga  outside.tga  outside_sprites.tga  rat.tga  rod.tga  room.tga  stairwell.tga  stairwell2.tga  test.tga  tiles.tga  title.tga
app/src/main/assets/shaders/: darkness.frag  model.frag  model.vert
app/src/main/cpp/: DArray.h  DLinkedList.h  Entity.cpp  Extensions.cpp  Extensions.h  FindPath.cpp  FindPath.h  Game.cpp  Game.h  MathTools.cpp  MathTools.h  SDLVideo.h  Shader.cpp  ShaderProgram.cpp  SysConfig.h  SystemConf.cpp  SystemConf.h  TextureLoader.cpp  TextureLoader.h  Useful.cpp  Useful.h  Usefull.cpp  Usefull.h  Utils.cpp  Utils.h  Xml.cpp  game.cpp  mainer.cpp
app/src/main/cpp/GameStuff/: .Dude.cpp.swp  .ItemData.h.swp  Actor.cpp  Actor.h  ActorContainer.cpp  ActorContainer.h  AdditionalVertices.h  Asset.h  CraftingRecipes.cpp  CraftingRecipes.h  Drawable.h  Dude.cpp  Dude.h  Furniture.cpp  Furniture.h  FurnitureData.cpp  FurnitureData.h  GameMap.cpp  GameMap.h  GameMapGraph.cpp  GameMapGraph.h  Ghost.cpp  Ghost.h  GlobalItemList.h  ItemContainer.cpp  ItemContainer.h  ItemData.h  ItemDatabase.cpp  ItemInstance.cpp  ItemInstance.h  Polygon.h  Projectile.cpp  Rat.cpp  Rat.h  Region.h  Statistics.cpp
app/src/main/cpp/GameStuff/actors/: Actor.cpp  Actor.h  Bear.cpp  Bear.h  Dude.cpp  Dude.h  Ghost.cpp  Ghost.h  Rat.cpp  Rat.h
app/src/main/cpp/GameStuff/map/: .GameMapGraph.h.swp  AdditionalVertices.h  GameMap.cpp  GameMap.h  GameMapGraph.cpp  GameMapGraph.h  Room.cpp  Room.h
app/src/main/cpp/audio/: SoundSystem.cpp  SoundSystem.h
app/src/main/cpp/gui/: Text.h
app/src/main/res/values/: strings.xml
data/: .itemLocations.xml.swp  .items.xml.swp  .recipes.xml.swp  furniture.xml  genericroom.xml  itemLocations.xml  items.xml  out.xml  outside.xml  outsideB.xml  outsideR.xml  recipes.xml  room.xml  stairwell.xml  stairwell2.xml
gradle/wrapper/: gradle-wrapper.properties
pics/: bear.tga  buttons.tga  darknessTransition.tga  dude.tga  dude_axe.tga  dude_flashlight.tga  dude_naked.tga  dude_naked_axe.tga  dude_naked_flashlight.tga  dude_naked_sleep.tga  dude_naked_slingshot.tga  dude_slingshot.tga  flashlight_bottom.tga  flashlight_front.tga  glow.tga  guistuff.tga  imagesToLoad.xml  items.tga  outside.tga  outside_sprites.tga  pointers.tga  projectile.tga  rat.tga  room.tga  stairwell.tga  stairwell2.tga  test.tga  title.tga  window_glow.tga
sfx/: .list.txt.swp  list.txt
src/: AndroidGame.cpp  Game.cpp  Game.h  Image.cpp  Image.h  Particles2D.cpp  SDLVideo.cpp  ShaderProgram.cpp  game_android.cpp  mainer.cpp  rm2.cpp  rm2.h
src/GameStuff/: ActorContainer.cpp  ActorContainer.h  Asset.h  Consts.cpp  Consts.h  CraftingRecipes.h  Furniture.cpp  Furniture.h  FurnitureData.cpp  FurnitureData.h  GlobalItemList.cpp  ItemContainer.cpp  ItemContainer.h  ItemData.h  ItemDatabase.h  ItemInstance.h  Polygon.h  Projectile.cpp  Projectile.h  ProjectileContainer.cpp  ProjectileContainer.h  Statistics.h
src/GameStuff/actors/: Actor.cpp  Actor.h  Bear.cpp  Bear.h  Dude.cpp  Dude.h  Ghost.cpp  Ghost.h  Rat.cpp  Rat.h
src/GameStuff/map/: GameMap.cpp  GameMap.h  GameMapGraph.cpp  GameMapGraph.h  Map.h  Room.cpp  Room.h
tests/: .SConstruct.swp  .sconsign.dblite  .test.cpp.swp  SConstruct  test  test.cpp
